--- a/src/guides/main/foundation-grants-arbitrum-university-884.yaml
+++ b/src/guides/main/foundation-grants-arbitrum-university-884.yaml
@@ -1,20 +1,78 @@
 categories: []
 content: Learn how to apply for foundation grants!
-created: '2023-11-16T14:17:18.404Z'
+created: '2023-11-16T14:54:35.250Z'
 guideType: onboarding
 key: foundation-grants-arbitrum-university-884
 name: Foundation Grants
 publishStatus: Live
 steps:
-  - content: |2-
+  - content: >-
+      ## What are Foundation Grant Program?
 
-              
+      The Arbitrum Foundation's Grant Program is a strategic initiative designed
+      to bolster the growth of the Arbitrum ecosystem as per its mission
+      statement. Managed by the Arbitrum Foundation and distinct from any grants
+      by the Arbitrum DAO, this program aims to disburse funds to projects that
+      are likely to contribute significantly to the development and expansion of
+      the ecosystem. With a focus on enhancing adoption, strengthening the
+      technical framework, and fostering vibrant, sustainable communities, the
+      program issues grants in phases, each targeting specific sectors within
+      the Arbitrum ecosystem. While the program aligns with and supports the
+      DAO's objectives, it is an independent entity, focusing on specific
+      opportunities and partnerships to advance the broader use and engagement
+      with Arbitrum's technology. Projects not fitting the current phase's
+      criteria are encouraged to apply through the DAO's proposal process or
+      check back as the program's phases evolve.
+
+
+      ### Length of Grant Programs
+
+      The Arbitrum Foundation Grants Program is structured as a continuous
+      effort with no set termination, featuring an open submission window for
+      projects seeking grants, and operates in phases typically lasting around
+      three months. These phases continue until the Foundation deems their goals
+      accomplished. However, the program does include specified Grant Moratorium
+      periods when new applications are temporarily suspended; these pauses in
+      grant acceptance are communicated in advance on the program's Notion page.
+
+
+      ### Eligibility for grant Programs
+
+      The Arbitrum Foundation Grants Program is targeted at projects that
+      contribute to, assist with, or support the Arbitrum ecosystem, with the
+      scope of eligible applicants determined by the current Phase's focus. As
+      these Phases evolve, the particular segments of the ecosystem that are
+      invited to apply for grants will also change, ensuring that the program
+      remains aligned with the ecosystem's shifting needs and opportunities.
+      Projects interested in applying should consult the "Current Grant
+      Categories" for the most up-to-date information on eligibility and focus
+      areas.
+
+
+      ## Benefits of Foundation Grants
+
+      The benefits of the Foundation Grants Program for projects in the Arbitrum
+      ecosystem include:
+
+
+      1. Tailored funding that aligns with the project's specific needs, with
+      distributions based on the achievement of set milestones, deliverables,
+      and detailed budget plans.
+
+      2. Inclusion in the Builders group, which connects grant recipients to a
+      community of motivated and enthusiastic contributors within the Arbitrum
+      ecosystem.
+
+      3. Opportunities to highlight and promote projects within the broader
+      Arbitrum ecosystem after meeting significant milestones or demonstrating
+      considerable progress.
+
+      4. Continued engagement and support from the Arbitrum Foundation after the
+      successful completion of grant milestones, providing additional
+      opportunities for growth and networking to sustain and expand project
+      success beyond the grant period.
     name: Introduction to Foundation Grant
-    stepItems:
-      - label: Full Name
-        required: false
-        type: PublicShortInput
-        uuid: d2e06860-d229-4de0-8cb1-d27e7e269017
+    stepItems: []
     uuid: 9b65efc7-4c57-4c3f-9379-d48abcf4166f
   - content: ''
     name: Evaluation
@@ -75,6 +133,6 @@ steps:
     uuid: 4a6e6d9c-0061-44ef-99dc-82c999bc86e7
 thumbnail: >-
   https://d31h13bdjwgzxs.cloudfront.net/QmWy8EeMnxqx96VEPx2NBwzqtKxvMQqVVYvmPKgAYS2cUi
-uuid: ccf64d96-44e0-4ee4-abc8-f7e9b34f909e
+uuid: foundation-grants-arbitrum-university-884
 version: 1
 priority: 50
