--- a/src/guides/main/foundation-grants-arbitrum-university-884.yaml
+++ b/src/guides/main/foundation-grants-arbitrum-university-884.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Learn how to apply for foundation grants!
-created: '2023-11-16T14:54:35.250Z'
+created: '2023-11-16T15:13:01.088Z'
 guideType: onboarding
 key: foundation-grants-arbitrum-university-884
 name: Foundation Grants
@@ -99,7 +99,96 @@ steps:
         uuid: 493f6619-ddba-4186-b8b5-a38892524735
         explanation: Explanation of the question
     uuid: 4da7bece-6c82-4a0b-9074-16e291565b88
-  - content: ''
+  - content: >-
+      ## Inelligible Applications
+
+      Applications for the Foundation Grants Program may be deemed ineligible if
+      they involve any of the following:
+
+
+      1. Gambling activities, including prediction markets, drugs, or firearms.
+
+      2. Participation in illicit trade, money laundering, or any form of
+      criminal activity.
+
+      3. "Virtual Asset Services" such as public token launches or managing
+      virtual assets on behalf of others.
+
+      4. Projects centered around token or securities issuance, including
+      distributions, creation of new tokens, investments for returns, buybacks,
+      dividends, or exchange listings for $ARB or other tokens.
+
+      5. Any transactions that directly or indirectly provide funds to
+      individuals or entities under sanctions, or projects that involve such
+      sanctioned parties.
+
+      6. Proposals that require or imply endorsement by the Arbitrum Foundation.
+
+      7. Projects or teams located in countries subject to OFAC sanctions,
+      including but not limited to Cuba, Iran, North Korea, Russia, Syria,
+      Ukraine, or other prohibited jurisdictions.
+
+
+      ## Creating Grant Application
+
+      It is essential to be aware of how to create a grant application in order
+      to increase the chances for getting accepting. Your application must
+      include the following essential details:
+
+
+      ### Project
+
+      When applying for a grant, your application should include the following
+      aspects concerning your project:
+
+
+      1. A clear demonstration of how your project addresses critical and
+      existing challenges within the Arbitrum ecosystem, specific to the
+      category of your project's focus, that are not already being addressed.
+
+      2. Evidence of your project's potential for growth and tangible progress
+      towards achieving its objectives, contributing positively to the broader
+      Web3 space and fostering its expansion.
+
+      3. The ability to present your project to the wider Arbitrum ecosystem,
+      highlighting key milestones achieved or significant headway made towards
+      your project's goals.
+
+      4. Proof of your project's sustainability post-grant completion, including
+      a strategic plan for ongoing maintenance and continuous growth within the
+      Arbitrum ecosystem.
+
+      5. A commitment from your team to fulfill the project's objectives,
+      evidenced by a solid history of success and the capability to manage
+      timelines and monitor essential milestones effectively.
+
+      6. An appropriate public profile for your project, commensurate with its
+      development stage, ensuring it represents a venture that the Arbitrum
+      Foundation would endorse. This includes active and positive social media
+      presence and community engagement.
+
+      7. For projects within highly competitive areas, a clear competitive
+      advantage or unique proposition that sets your project apart from others
+      in the same vertical within the ecosystem.
+
+
+      ### Tips for the Application
+
+      To enhance the likelihood of success for your grant application, consider
+      the following tips:
+
+
+      1. Ensure your application is precise and detailed, showing evidence of
+      initial development efforts or preliminary work.
+
+      2. Answer all parts of the application comprehensively, providing links to
+      external resources such as websites, blog posts, news articles, or social
+      media threads where they can add context and depth to your application.
+
+      3. Pay attention to the quality of your writing; while you don't need to
+      be a literary genius, proper spelling and grammar, complete and coherent
+      sentences, a professional tone, and direct responses to the prompts are
+      all crucial for a favorable impression.
     name: Submission Guidelines
     stepItems: []
     uuid: a2d91b3f-626f-4598-802b-ccf466f476a5
